# PoPOpt

./: CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE-NOTICE.md  README.md  README_EN.md  SECURITY.md  THIRD_PARTY_NOTICES.md
.backup/V28/: PoP_UniversalPatch.cpp  PoP_UniversalPatch.ini
config/: PoP_UniversalPatch.ini  README.md
config/examples/: PoP_UniversalPatch.user-tested.zh-CN.ini
docs/: ARCHITECTURE.md  BUILDING.md  COMPATIBILITY.md  CONFIGURATION.md  EARLY_LANGUAGE_VOICE_FIX.md  MIGRATION_V28_TO_V29.md  MODULE_MAP_LEGACY.md  RELEASE_CHECKLIST.md  TESTING.md  TROUBLESHOOTING.md
docs/audits/: CHECK_BUILD_DEPENDENCIES.md  SOURCE_AUDIT.md  SOURCE_AUDIT_EARLY_LANGUAGE_VOICE_FIX.txt
reference/: README.md
reference/tpf-loader/: PoP_TPFLoader_v0.1_verified_base.cpp  TpfArchive.cpp  TpfArchive.h
reference/v28-single-file/: PoP4_UniversalPatch_v28_stable_base.cpp
src/: Main.cpp
src/core/: Core.cpp  Core.h  LanguageIds.cpp  LanguageIds.h  Module.h  PeUtils.cpp  PeUtils.h
src/modules/: CpuModule.cpp  CpuModule.h  DiagnosticsModule.cpp  DiagnosticsModule.h  DisplayModule.cpp  DisplayModule.h  DpiModule.cpp  DpiModule.h  GraphicsModule.cpp  GraphicsModule.h  InputModule.cpp  InputModule.h  SettingsRegistryModule.cpp  SettingsRegistryModule.h  TextureLoaderModule.cpp  TextureLoaderModule.h  VoiceModule.cpp  VoiceModule.h
test-assets/: README.md  XBOX.tpf
tools/verification/: check_dependencies_mingw.bat  check_dependencies_msvc.bat  verify_repository.py
